Change how relative dates are rendered - now handled by momentjs

--- a/app/di.services.yml
+++ b/app/di.services.yml
@@ -51,6 +51,7 @@ services:
             - @build.repo
             - @push.repo
             - @clock
+            - %date.timezone%
         calls:
             - ['setCache', [@cache]]
             - ['setCacheTTL', [%cache.stats.ttl%]]
