Add version and sha to page

--- a/app/di.yml
+++ b/app/di.yml
@@ -172,6 +172,7 @@ services:
         calls:
             - ['addGlobal', ['applicationTitle', %application.title%]]
             - ['addGlobal', ['applicationSha', %application.sha%]]
+            - ['addGlobal', ['applicationVersion', %application.major.version%]]
             - ['addGlobal', ['navItems', %navigation.list%]]
             - ['addGlobal', ['session', @session]]
 
