Add stub value for ldap pass in dev yml

--- a/configuration/environment/dev.yml
+++ b/configuration/environment/dev.yml
@@ -4,6 +4,8 @@ parameters:
     debug: true
     twig.debug: true
 
+    ldap.password: ''
+
     database.username: 'root'
     database.password: ''
     database.database: 'hal'
